# ObjViewer

./: LICENSE  ObjViewer.cabal  ObjViewer.hs  README  README.md  TODO  stack.yaml
Engine/: Factory.hs  Geometry.hs  Primitives.hs  Texture.hs
Math/: Matrix.hs  Quaternion.hs  Vector.hs
Parser/: ObjParser.hs
Utility/: Apply.hs  Image.hs  List.hs  Map.hs  Misc.hs  Monad.hs  Tuple.hs
app/: ObjViewer.hs
src/Engine/: Factory.hs  Geometry.hs  Primitives.hs  Texture.hs
src/Math/: Matrix.hs  Metric.hs  Quaternion.hs  Vector.hs
src/Parser/: ObjParser.hs
src/Utility/: Apply.hs  Image.hs  List.hs  Map.hs  Misc.hs  Monad.hs  Tuple.hs
test/: jeep_windshield.mtl  suzanne.mtl
testobjects/: suzanne.mtl
