name:                ObjViewer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rakete/ObjViewer#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Raster
maintainer:          lazor@affenbande.org
copyright:           2016 Andreas Raster
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                  Parser.ObjParser,
                  Engine.Geometry,
                  Engine.Texture,
                  Engine.Factory,
                  Engine.Primitives,
                  Utility.Apply,
                  Utility.Map,
                  Utility.Misc,
                  Utility.Monad,
                  Utility.Tuple,
                  Utility.Image,
                  Utility.List,
                  Math.Matrix,
                  Math.Metric,
                  Math.Quaternion,
                  Math.Vector
  build-depends:
                base >= 4.7 && < 5,
                Imlib == 0.1.2,
                containers == 0.5.7.1,
                array == 0.5.1.1,
                transformers == 0.5.2.0,
                template-haskell == 2.11.0.0,
                OpenGL == 3.0.1.0,
                directory == 1.2.6.2,
                parsec == 3.1.11
  default-language:    Haskell2010

executable ObjViewer-exe
  hs-source-dirs:      app
  main-is:             ObjViewer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >= 4.7 && < 5,
                ObjViewer,
                mtl == 2.2.1,
                OpenGL == 3.0.1.0,
                GLFW == 0.5.2.5,
                containers == 0.5.7.1,
                deepseq == 1.4.2.0
  default-language:    Haskell2010

test-suite ObjViewer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , ObjViewer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rakete/ObjViewer
